# coding-agent-monitor

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  gpt_pro_suggestions.md
docs/: dev-history-rag-sys-analysis.md  sample_deep_analysis_report.html  sample_deep_analysis_report.md  ship-boundary-audit.md
docs/superpowers/specs/: 2026-06-22-entropy-control-plane-design.md
src/: acceptance_extraction_tests.rs  adapter_ingest.rs  adapters.rs  advisor_boundary.rs  advisor_client.rs  advisor_client_tests.rs  agent_review.rs  belief.rs  calibration.rs  cli_judge.rs  cli_judge_tests.rs  cli_parse.rs  cli_parse_tests.rs  cli_support.rs  cli_support_tests.rs  completion.rs  config.rs  console_decode_tests.rs  control_calibration.rs  dashboard.rs  dev_history.rs  durable_memory.rs  entropy.rs  events.rs  hook_response.rs  hook_response_tests.rs  injection.rs  jsonl.rs  lib.rs  main.rs  main_tests.rs  model.rs  monitor.rs  outcome_recording.rs  outcomes.rs  packet_dispatch.rs  probe.rs  redaction.rs  redaction_tests.rs  repo_audit.rs  (+9 more)
tests/: adapter_ingest.rs  blame.rs  calibration.rs  dashboard.rs  dev_history.rs  entropy_control.rs  handoff.rs  injections.rs  jsonl.rs  judge.rs  monitor.rs  persistence.rs  repo_audit.rs  requirements.rs  running_agents.rs  wrap_command.rs  wrap_events.rs
tests/entropy_control/: advisor_validation.rs  config.rs  evidence_provenance.rs  policy_user_decision.rs
