[package]
name = "coding-agent-monitor"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.34.3"
egui_extras = "0.34.3"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.39.4"
thiserror = "2.0"
tray-icon = "0.24.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_Networking_WinHttp",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3.23"

[[bin]]
name = "agent-monitor"
path = "src/main.rs"
